--- a/template.yaml
+++ b/template.yaml
@@ -24,18 +24,18 @@ Resources:
           Properties:
             Path: /hello
             Method: get
-#  DataIngestFunction:
-#    Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
-#    Properties:
-#      CodeUri: data_ingest/
-#      Handler: process.lambda_handler
-#      Runtime: python3.7
-#      Events:
-#        DataIngest:
-#          Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
-#          Properties:
-#            Path: /ingest
-#            Method: get
+  DataIngestFunction:
+    Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
+    Properties:
+      CodeUri: data_ingest/
+      Handler: process.lambda_handler
+      Runtime: python3.7
+      Events:
+        DataIngest:
+          Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
+          Properties:
+            Path: /ingest
+            Method: get
 
 Outputs:
   # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
@@ -50,3 +50,13 @@ Outputs:
   HelloWorldFunctionIamRole:
     Description: "Implicit IAM Role created for Hello World function"
     Value: !GetAtt HelloWorldFunctionRole.Arn
+
+  DataIngestdApi:
+    Description: "API Gateway endpoint URL for Prod stage for Data Ingest function"
+    Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/ingest/"
+  DataIngestFunction:
+    Description: "Data Ingest Lambda Function ARN"
+    Value: !GetAtt DataIngestFunction.Arn
+  DataIngestFunctionIamRole:
+    Description: "Implicit IAM Role created for Data Ingest function"
+    Value: !GetAtt DataIngestFunctionRole.Arn
