--- a/template.yaml
+++ b/template.yaml
@@ -24,8 +24,50 @@ Resources:
           Properties:
             Path: /hello
             Method: get
+            
   LandingZoneBucket:
     Type: AWS::S3::Bucket
+    Properties:
+      BucketEncryption:
+        ServerSideEncryptionConfiguration:
+          - ServerSideEncryptionByDefault:
+              SSEAlgorithm: AES256
+      PublicAccessBlockConfiguration:
+        BlockPublicPolicy: false
+        IgnorePublicAcls: false
+        RestrictPublicBuckets: false
+      VersioningConfiguration:
+        Status: Enabled
+
+  LandingZoneBucketPolicy:
+    Type: 'AWS::S3::BucketPolicy'
+    Properties:
+      Bucket: !Ref LandingZoneBucket
+      PolicyDocument:
+        Version: 2012-10-17
+        Statement:
+          - Action: '*'
+            Effect: Allow
+            Resource:
+              - !GetAtt LandingZoneBucket.Arn
+              - !Sub
+                  - '${varLandingZoneBucketArn}/*'
+                  - varLandingZoneBucketArn: !GetAtt LandingZoneBucket.Arn
+            Principal:
+              AWS: '*'
+              
+  LandigZoneBucketAccessPoint:
+    Type: 'AWS::S3::AccessPoint'
+    Properties:
+      Bucket: !Ref LandingZoneBucket
+      Name: 'ingest-access-point'
+      PublicAccessBlockConfiguration:
+        BlockPublicAcls: true
+        BlockPublicPolicy: true
+        IgnorePublicAcls: true
+        RestrictPublicBuckets: true
+      
+    
   DataIngestFunction:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
     Properties:
@@ -53,6 +95,13 @@ Outputs:
     Description: "Implicit IAM Role created for Hello World function"
     Value: !GetAtt HelloWorldFunctionRole.Arn
 
+  LandingZoneBucketName:
+    Description: "name of S3 bucket used as a file landing zone"
+    Value: !Ref LandingZoneBucket
+  LandigZoneBucketAccessPoint:
+    Description: "Arn of the landing zone bucket's access point"
+    Value: !GetAtt LandigZoneBucketAccessPoint.Arn
+    
   DataIngestdApi:
     Description: "API Gateway endpoint URL for Prod stage for Data Ingest function"
     Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/ingest/"
