--- a/template.yaml
+++ b/template.yaml
@@ -8,7 +8,7 @@ Description: >
 # More info about Globals: https://github.com/awslabs/serverless-application-model/blob/master/docs/globals.rst
 Globals:
   Function:
-    Timeout: 3
+    Timeout: 900  # allow for maximal timeout of 15 minutes (needed to process multiple PDF docs during a single lambda invocation)
     MemorySize: 128
     Environment:
       Variables:
