fix metadata key + increase runtime memory

--- a/template.yaml
+++ b/template.yaml
@@ -9,7 +9,7 @@ Description: >
 Globals:
   Function:
     Timeout: 900  # allow for maximal timeout of 15 minutes (needed to process multiple PDF docs during a single lambda invocation)
-    MemorySize: 128
+    MemorySize: 256 # increased from 128 to try to address issue with running Anthropic model in conversation mode
     Environment:
       Variables:
         DEFAULT_PINECONE_API_KEY: "4995b4bc-bb2d-4dfe-8bb3-992a10ea9854"
