--- a/template.yaml
+++ b/template.yaml
@@ -15,6 +15,7 @@ Globals:
         DEFAULT_PINECONE_API_KEY: "4995b4bc-bb2d-4dfe-8bb3-992a10ea9854"
         DEFAULT_PINECONE_ENVIRONMENT: "gcp-starter"
         DEFAULT_PINECONE_INDEX_NAME: "agda-knowledge-base"
+        DEFAULT_PINECONE_METRIC: "dotproduct"
         DEFAULT_MODEL_ID: 'anthropic.claude-instant-v1'
         DEFAULT_EMBEDDINGS_MODEL_ID: "amazon.titan-embed-text-v1"
         EMBEDDING_DIMENSION: 1536   # embedding vector dimensionality; should be based on a sample text chunk embedding...
