--- a/template.yaml
+++ b/template.yaml
@@ -124,6 +124,8 @@ Resources:
             Path: /bootstrap
             Method: get
             RestApiId: !Ref AppApi
+            Auth:
+              Authorizer: CognitoAuthorizer
 
   DataIngestFunction:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
