minor readme update

--- a/template.yaml
+++ b/template.yaml
@@ -209,6 +209,16 @@ Outputs:
   # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
   # Find out more about other implicit resources you can reference within SAM
   # https://github.com/awslabs/serverless-application-model/blob/master/docs/internals/generated_resources.rst#api
+  BootstrapApi:
+    Description: "API Gateway endpoint URL for Prod stage for Bootstrap function ((re-)initialize Pinecone index)"
+    Value: !Sub "https://${AppApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/bootstrap/"
+  BootstrapFunction:
+    Description: "Bootstrap Lambda Function ARN"
+    Value: !GetAtt BootstrapFunction.Arn
+  BootstrapFunctionIamRole:
+    Description: "Implicit IAM Role created for Bootstrap function"
+    Value: !GetAtt BootstrapFunctionRole.Arn
+    
   QAApi:
     Description: "API Gateway endpoint URL for Prod stage for Q&A function"
     Value: !Sub "https://${AppApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/qa/"
