--- a/template.yaml
+++ b/template.yaml
@@ -155,11 +155,19 @@ Resources:
         - !Ref UtilsLayer
         - !Ref LibsLayer
       Events:
-        QA:
+        QAGET:
           Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
           Properties:
             Path: /qa
             Method: get
+            RestApiId: !Ref AppApi
+            Auth:
+              Authorizer: CognitoAuthorizer
+        QAPOST:
+          Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
+          Properties:
+            Path: /qa
+            Method: post
             RestApiId: !Ref AppApi
             Auth:
               Authorizer: CognitoAuthorizer
